--- a/style.css
+++ b/style.css
@@ -149,9 +149,10 @@ footer {
 }
 
 .contact-decorated-img {
-  max-width: 700px;
-  max-height: 500px;
+  max-width: 600px;
+  max-height: 400px;
   object-fit: cover;
+  margin-left: 20px;
 }
 
 .decorated-links {
